Fixed Horizontal scrolling as recommended by reviewer

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,8 @@
     width: 100%;
     height: 211px;
     top: 156px;
-    left: 27px;
+    padding-left: 13px;
+    padding-right: 13px;
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -83,6 +84,7 @@
     color: #172b4d;
     align-items: center;
     text-align: center;
+    align-content: center;
   }
 
   .home .hello span {
@@ -92,9 +94,11 @@
   .home .home-text {
     position: absolute;
     width: 100%;
+    max-width: fit-content;
     height: 164px;
     top: 382px;
-    left: 27px;
+    padding-left: 13px;
+    padding-right: 13px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     line-height: 28px;
